<resources>

    <string name="app_name">Attendance</string>
    <string name="Welcome">Welcome!</string>
    <string name="Hello">Hello There!</string>
    <string name="hintusername">Username</string>
    <string name="hintpassword">Password</string>
    <string name="forget">Forgot password</string>
    <string name="Remember">Remember</string>
    <string name="help">Help???</string>
    <string name="login">Sign in</string>
    <string name="mycourses">My Courses</string>
    <string name="hintCodeCourse">subject code</string>
    <string name="btnJoinCourse">Join</string>
    <string name="tutorial_Join_Course">Click the Join button to join the Course</string>

    <string name="txt_register">Sign up</string>
    <string name="txt_sign_in">Login</string>
    <string name="hintusercode">User code</string>
    <string name="hintname">Your Name</string>
    <string name="hintmail">Email</string>
    <string name="hintmajor">Major</string>
    <string name="rbtnstudent">Student</string>
    <string name="rbtnlecturer">Lecturer</string>
    <string name="txtaccept">Accept\'</string>
    <string name="txtcancel">Cancel</string>
    <string name="hintrename">New Usercode</string>
    <string name="txtTitleNewCourseActivity">Course</string>
    <string name="hintnamecourse">Name</string>
    <string name="hintsize">"Size "</string>
    <string name="hintlecturer">Lecturer</string>
    <string name="hintCreateAt">Start At</string>
    <string name="hintendat">End at</string>
    <string name="hintkey">key</string>
    <string name="txtcreate">Create</string>
    <string name="hintnovalue">data cannot be left blank</string>
    <string name="hintdate">yyyy/MM/dd</string>
    <string name="hintlessonname">Lesson title</string>
    <string name="ExportFile">Export file</string>
    <string name="txtReport">Report</string>
    <string name="title_lesson">Lesson</string>
    <string name="title_inf_attendance">Information</string>
    <string name="title_dialog_addlesson">New a lesson</string>
    <string name="title_Course">Course</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="URL">https://attendanceuit.azurewebsites.net</string>
    <string name="host">https://attendanceuit.azurewebsites.net</string>
    <string name="port">3456</string>
    <string name="hint_securityandlogin">Security and Login</string>
    <string name="txtchangepassword">Change your password to add more security to your account</string>
    <string name="hint_signout">Sign out</string>
    <string name="txt_signout">Log out of attendance application</string>
    <string name="btnChangePassword">Save Changes</string>
    <string name="btnCancel">Cancel</string>
    <string name="hintCurrentPassword">Current password</string>
    <string name="hintnewpassword">New password</string>
    <string name="hint_re_typepassword">Re-type new password</string>
    <string name="changepassword">Change Password</string>
    <string name="RetsetPassword">Reset Password</string>
    <string name="title_actionbar_resetpassword">Reset Password</string>
    <string name="hint_txtSearch">Enter student code</string>
    <string name="txtConnect">Connect</string>
    <string name="txtDisconnect">Disconnect</string>
    <string name="txt_titleregister">Don\'t have an account?</string>
    <string name="txt_register1">Register an account</string>
    <string name="txt_titlelogin">Already have an account?</string>
    <string name="txt_login">Sign in</string>
    <string name="txt_titleRegisterActivity">Create Account</string>
    <string name="txt_valueRegisterActivity">Register an account to be able to use the application</string>
</resources>