<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_2"
        tools:context=".Activity.NewCourseActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:gravity="center"
                  android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="50dp"
                  android:textColor="@color/field"
                  android:text="@string/txtTitleNewCourseActivity"
                  android:id="@+id/txtRegister"
        ></TextView>

    </LinearLayout>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="490dp">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_marginTop="20dp"
                      android:layout_marginBottom="30dp"
                      android:gravity="center"
                      android:orientation="vertical">

            <EditText
                    android:id="@+id/txtCodeCourse"
                    android:layout_width="292dp"
                    android:layout_height="42dp"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_marginTop="25dp"
                    android:alpha="0.5"
                    android:background="@drawable/inputfield"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/hintCodeCourse"
                    android:inputType="text"
            ></EditText>
            <EditText
                    android:id="@+id/txtCourseName"
                    android:layout_width="292dp"
                    android:layout_height="42dp"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_marginTop="25dp"
                    android:alpha="0.5"
                    android:background="@drawable/inputfield"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/hintnamecourse"
                    android:inputType="text"
            ></EditText>
            <EditText
                    android:id="@+id/txtSize"
                    android:layout_width="292dp"
                    android:layout_height="42dp"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_marginTop="25dp"
                    android:alpha="0.5"
                    android:background="@drawable/inputfield"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/hintsize"
                    android:inputType="number"
            ></EditText>
            <EditText
                    android:id="@+id/txtMajorCode"
                    android:layout_width="292dp"
                    android:layout_height="42dp"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_marginTop="25dp"
                    android:alpha="0.5"
                    android:background="@drawable/inputfield"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/hintmajor"
                    android:inputType="text"
            ></EditText>
            <EditText
                    android:id="@+id/txtLecturer"
                    android:layout_width="292dp"
                    android:layout_height="42dp"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_marginTop="25dp"
                    android:alpha="0.5"
                    android:background="@drawable/inputfield"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/hintlecturer"
                    android:inputType="text"
            ></EditText>
            <EditText
                    android:id="@+id/txtKeyCourse"
                    android:layout_width="292dp"
                    android:layout_height="42dp"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_marginTop="25dp"
                    android:alpha="0.5"
                    android:background="@drawable/inputfield"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/hintkey"
                    android:inputType="text"
            ></EditText>
            <EditText
                    android:id="@+id/txtStartAt"
                    android:layout_width="292dp"
                    android:layout_height="42dp"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_marginTop="25dp"
                    android:alpha="0.5"
                    android:background="@drawable/inputfield"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/hintCreateAt"
                    android:inputType="text"
            ></EditText>
            <EditText
                    android:id="@+id/txtEndAt"
                    android:layout_width="292dp"
                    android:layout_height="42dp"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_marginTop="25dp"
                    android:alpha="0.5"
                    android:background="@drawable/inputfield"
                    android:ems="10"
                    android:layout_marginBottom="90dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/hintendat"
                    android:inputType="text"
            ></EditText>
        </LinearLayout>
    </ScrollView>
    <Button
            android:id="@+id/btnCreate"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:background="@drawable/button_selector_login"
            android:text="@string/txtcreate"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"

            android:layout_marginTop="25dp"
            android:layout_gravity="center"
    />

</LinearLayout>