<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_2"
        tools:context=".Activity.RegisterActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="50dp"
                  android:layout_marginLeft="150dp"
                  android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="30dp"
                  android:textColor="@color/field"
                  android:text="@string/txt_register"
                  android:id="@+id/txtRegister"
        ></TextView>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"
                  android:layout_marginTop="20dp"
                  android:textSize="30dp"
                  android:textColor="@color/white"
                  android:text="@string/txt_sign_in"
                  android:id="@+id/txtSign_In">

        </TextView>
    </LinearLayout>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="20dp"
                      android:gravity="center"
                      android:orientation="vertical">
            <EditText
                    android:id="@+id/txtUserName"
                    android:layout_width="292dp"
                    android:layout_height="42dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:scrollHorizontally="true"
                    android:layout_marginTop="25dp"
                    android:alpha="0.5"
                    android:background="@drawable/inputfield"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/hintusername"
            ></EditText>
            <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="292dp"
                    android:layout_height="42dp"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_marginTop="25dp"
                    android:alpha="0.5"
                    android:background="@drawable/inputfield"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/hintpassword"
                    android:inputType="textPassword"
            ></EditText>
            <EditText
                    android:id="@+id/txtCodeUser"
                    android:layout_width="292dp"
                    android:layout_height="42dp"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_marginTop="25dp"
                    android:alpha="0.5"
                    android:background="@drawable/inputfield"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/hintusercode"
                    android:inputType="text"
            ></EditText>
            <EditText
                    android:id="@+id/txtName"
                    android:layout_width="292dp"
                    android:layout_height="42dp"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_marginTop="25dp"
                    android:alpha="0.5"
                    android:background="@drawable/inputfield"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/hintname"
                    android:inputType="text"
            ></EditText>
            <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="292dp"
                    android:layout_height="42dp"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_marginTop="25dp"
                    android:alpha="0.5"
                    android:background="@drawable/inputfield"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/hintmail"
                    android:inputType="textEmailAddress"
            ></EditText>
            <EditText
                    android:id="@+id/txtMajor"
                    android:layout_width="292dp"
                    android:layout_height="42dp"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:layout_marginTop="25dp"
                    android:alpha="0.5"
                    android:background="@drawable/inputfield"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/hintmajor"
                    android:inputType="text"
            ></EditText>
            <RadioGroup android:layout_width="292dp"
                        android:layout_height="42dp"
                        android:orientation="horizontal"
                        android:alpha="0.5"
                        android:ems="10"
                        android:gravity="center_vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        android:background="@drawable/inputfield"
                        android:layout_marginTop="25dp">
                <RadioButton android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/rbtnstudent"
                             android:id="@+id/rbtnStudent"
                ></RadioButton>
                <RadioButton android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/rbtnlecturer"
                             android:layout_marginLeft="50dp"
                             android:id="@+id/rbtnLecturer"
                ></RadioButton>
            </RadioGroup>

        </LinearLayout>
    </ScrollView>
    <Button
            android:id="@+id/btn_Rigister"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:background="@drawable/button_selector_login"
            android:text="@string/txt_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"

            android:layout_marginTop="25dp"
            android:layout_gravity="center"
    />

</LinearLayout>