<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".Activity.JoinCourseActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:layout_marginVertical="150dp">


        <ImageView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/white"
                   android:src="@drawable/join"
        ></ImageView>
        <EditText android:layout_width="292dp"
                  android:layout_height="42dp"
                  android:id="@+id/txtCodeCourse"
                  android:background="@drawable/inputfield"
                  android:layout_marginHorizontal="20dp"
                  android:hint="@string/hintCodeCourse"
        ></EditText>
        <TextView android:layout_width="match_parent"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:layout_marginVertical="10dp"
                  android:textColor="@color/black"
                  android:layout_height="wrap_content"
                  android:text="@string/tutorial_Join_Course"
        ></TextView>
        <Button android:layout_width="150dp"
                android:layout_height="42dp"
                android:id="@+id/btnJoinCourse"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_gradiant_login1"
                android:text="@string/btnJoinCourse"
        ></Button>
    </LinearLayout>
</LinearLayout>