<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:context=".Activity.ChangePasswordActivity">
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_marginTop="25dp"
                  android:layout_gravity="center"
                  android:weightSum="1"
    >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="10dp"
                  android:textColor="@android:color/holo_red_light"
                  android:id="@+id/notification_no_currentpassword"
        ></TextView>
        <EditText
                android:id="@+id/txtCurrentPassword"
                android:layout_width="292dp"
                android:layout_height="42dp"
                android:maxLines="1"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:layout_weight="0.9"
                android:alpha="0.5"
                android:background="@drawable/inputfield"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/hintCurrentPassword"
        ></EditText>
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_marginTop="25dp"
                  android:layout_gravity="center"
                  android:weightSum="1"
    >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="10dp"
                  android:textColor="@android:color/holo_red_light"
                  android:id="@+id/notification_no_new_Password"
        ></TextView>
        <EditText
                android:id="@+id/txtNewPassword"
                android:layout_width="292dp"
                android:layout_height="42dp"
                android:maxLines="1"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:layout_weight="0.9"
                android:alpha="0.5"
                android:background="@drawable/inputfield"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/hintnewpassword"
        ></EditText>
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_marginTop="25dp"
                  android:layout_gravity="center"
                  android:weightSum="1"
    >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="10dp"
                  android:textColor="@android:color/holo_red_light"
                  android:id="@+id/notification_no_re_typeNewPassword"
        ></TextView>
        <EditText
                android:id="@+id/txtRe_TypeNewPassword"
                android:layout_width="292dp"
                android:layout_height="42dp"
                android:maxLines="1"
                android:inputType="text"
                android:scrollHorizontally="true"
                android:layout_weight="0.9"
                android:alpha="0.5"
                android:background="@drawable/inputfield"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/hint_re_typepassword"
        ></EditText>
    </LinearLayout>
    <Button
            android:id="@+id/btn_ChangePassword"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:background="@drawable/button_dialog"
            android:text="@string/btnChangePassword"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
    />

    <Button
            android:id="@+id/btn_Cancel"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:background="@drawable/button_while"
            android:text="@string/btnCancel"
            android:textAllCaps="false"
            android:textColor="@color/material_blue_grey_80"
            android:textSize="19sp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
    />
    <TextView
            android:id="@+id/txt_FogotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/forget"
            android:layout_gravity="center"
            android:textColor="@color/colorAccentDark"
            android:textSize="16dp"
          />


</LinearLayout>